2008-01-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/4.t: Test Glib::Type->list_ancestors and
	Glib::Type->package_from_cname.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.172.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* ParseXSDoc.pm (parse_file): When parsing an #else pre-processor
	directive, make sure we have actually seen and parsed a
	corresponding #if before trying to negate its entry.  This can
	happen when our parsing heurestics fail.  The result was an
	exception: "Modification of non-creatable array value attempted."

2008-01-09  muppet <scott@asofyet.org>

	* GType.xs:  Defer the instantiation of a newly-registered
	object class's class until after we've parsed the list of
	signals, properties, and interfaces to add to it.  This
	allows perl-derived GObjects to override GInterfaces that
	are implemented by parent classes.  Previously, the early
	instantiation confused GLib and caused the call to
	g_type_class_add_interface() to complain that the given type
	already conforms to the interface, because the type system
	considered the initialization of the class to be complete.

	Note that we do not currently have a way of chaining up to
	a parent's GInterface implementation, as can be done in C
	via g_type_interface_peek_parent().  Black magic may be
	required for that.

2008-01-07  muppet <scott@asofyet.org>

	* GObject.xs:  Load GInterface types immediately, instead of
	leaving them for lazy loading.  Otherwise, it is possible to
	get into situations in which a GInterface has not triggered
	its lazy loading by the time it is needed.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* CodeGen.pm
	* GBoxed.xs
	* GError.xs
	* GObject.xs
	* GSignal.xs
	* GType.xs
	* GValue.xs
	* Glib.exports
	* Glib.xs
	* gperl.h
	* typemap: Rename gperl_sv_defined to gperl_sv_is_defined.

	* GBoxed.xs
	* GError.xs
	* GType.xs
	* gperl.h: Add new macros: gperl_sv_is_array_ref,