@@ -1,3 +1,8 @@
+2008-01-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* t/9.t
+	* t/filename.t: Hopefully fix test failures on Windows.
+
 2008-01-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* t/4.t: Test Glib::Type->list_ancestors and
